       be callable.

Limitations:
    1. JDK 1.4.2 or higher is required
    2. JavaScript support does not include some DOM properties
    3. The JavaScript assignment Document.cookie= does not restrict the cookie by path and domain
    4. Only table cells and explicit paragraphs are recognized as text blocks


Revision History:
=================
06-Apr-2008 bugfix 1110071: cannot increase length of a select control

for a full subversion log you  might want to issue the subversion command:
	svn log https://httpunit.svn.sourceforge.net/svnroot/httpunit
02-Apr-2008:	
------------------------------------------------------------------------
r879 | wolfgang_fahl | 2008-04-02 09:08:48 +0200 (Mi, 02 Apr 2008) | 3 lines

[ 1281655 ] [patch] allow text/xml to be parsed as html
by fabrizio giustina 
made available static accessor for validContentTypes in WebResponse
------------------------------------------------------------------------
r878 | wolfgang_fahl | 2008-04-02 08:39:21 +0200 (Mi, 02 Apr 2008) | 1 line

comments for patch 1509117
------------------------------------------------------------------------
r877 | wolfgang_fahl | 2008-04-02 01:41:53 +0200 (Mi, 02 Apr 2008) | 2 lines

test for bug report [ 1295782 ] Method purgeEmptyCells Truncates Table by ahansen 2005-09-19 22:47
no fix necessary anymore - already patched
------------------------------------------------------------------------
r876 | wolfgang_fahl | 2008-04-02 01:31:38 +0200 (Mi, 02 Apr 2008) | 2 lines

test for bug report [ 1153066 ] Eternal loop while processing javascript by Serguei Khramtchenko 2005-02-27

------------------------------------------------------------------------
r875 | wolfgang_fahl | 2008-04-02 01:08:51 +0200 (Mi, 02 Apr 2008) | 2 lines

test for [ 1396877 ] Javascript:properties parentNode,firstChild, .. returns null
by gklopp 2006-01-04 15:15
------------------------------------------------------------------------