@@ -15,6 +15,8 @@ Limitations:
 
 Revision History:
 =================
+14-Apr-2008 PseudoServer was incorrectly parsing chunk lengths as decimal rather than hexadecimal
+
 06-Apr-2008 bugfix 1110071: cannot increase length of a select control
 
 for a full subversion log you  might want to issue the subversion command:
